feat!(plugin-shiki): bump shiki to v3, migrate to official transformers (#1672)
Co-authored-by: SoonIter <sooniter@gmail.com>

--- a/e2e/fixtures/plugin-shiki/package.json
+++ b/e2e/fixtures/plugin-shiki/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@rspress/plugin-shiki": "workspace:*",
+    "@shikijs/transformers": "^3.1.0",
     "rspress": "workspace:*"
   },
   "devDependencies": {
