--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -16,6 +16,7 @@
     "preview": "rspress preview"
   },
   "devDependencies": {
+    "@rsbuild/plugin-sass": "~1.2.2",
     "@rspress/plugin-algolia": "workspace:*",
     "@rstack-dev/doc-ui": "1.6.0",
     "@types/react": "^18.3.18",
