--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -64,6 +64,7 @@
     "@rsbuild/plugin-react": "~1.1.1",
     "@rsbuild/plugin-sass": "~1.2.2",
     "@rsbuild/plugin-svgr": "^1.0.7",
+    "@rsbuild/plugin-typed-css-modules": "~1.0.2",
     "@rslib/core": "0.5.4",
     "@types/body-scroll-lock": "^3.1.2",
     "@types/hast": "^2.3.10",
