--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,9 +47,9 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
-    "@mdx-js/loader": "2.3.0",
-    "@mdx-js/mdx": "2.3.0",
-    "@mdx-js/react": "2.3.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/mdx": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@rsbuild/core": "1.3.0",
     "@rsbuild/plugin-react": "~1.1.1",
     "@rspress/mdx-rs": "0.6.6",
@@ -63,11 +63,11 @@
     "enhanced-resolve": "5.18.1",
     "github-slugger": "^2.0.0",
     "hast-util-from-html": "^2.0.3",
-    "hast-util-heading-rank": "^2.1.1",
+    "hast-util-heading-rank": "^3.0.0",
     "html-to-text": "^9.0.5",
     "htmr": "^1.0.2",
     "lodash-es": "^4.17.21",
-    "mdast-util-mdxjs-esm": "^1.3.1",
+    "mdast-util-mdxjs-esm": "^2.0.1",
     "picocolors": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -79,30 +79,30 @@
     "remark-gfm": "3.0.1",
     "rspack-plugin-virtual-module": "0.1.13",
     "tinyglobby": "^0.2.12",
-    "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.2",
-    "unist-util-visit-children": "^2.0.2"
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
+    "unist-util-visit-children": "^3.0.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.2",
     "@rslib/core": "0.6.0",
     "@rspress-dev/plugin-preview": "link:../plugin-preview",
     "@rspress/config": "workspace:*",
-    "@types/hast": "^2.3.10",
+    "@types/hast": "^3.0.4",
     "@types/html-to-text": "^9.0.4",
     "@types/jest": "~29.5.14",
     "@types/lodash-es": "^4.17.12",
-    "@types/mdast": "^3.0.15",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
     "memfs": "^4.17.0",
     "postcss": "8.5.3",
-    "rehype-stringify": "^9.0.4",
-    "remark-mdx": "2.3.0",
-    "remark-parse": "^10.0.2",
-    "remark-rehype": "^10.1.0",
-    "remark-stringify": "^10.0.3",
+    "rehype-stringify": "^10.0.1",
+    "remark-mdx": "^3.1.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
+    "remark-stringify": "^11.0.0",
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2",
