--- a/packages/plugin-api-docgen/package.json
+++ b/packages/plugin-api-docgen/package.json
@@ -28,12 +28,12 @@
     "documentation": "14.0.3",
     "react-docgen-typescript": "2.2.2",
     "react-markdown": "8.0.7",
-    "remark-gfm": "3.0.1"
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.2",
     "@rslib/core": "0.6.0",
-    "@types/mdast": "^3.0.15",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
@@ -41,8 +41,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.29.0",
     "typescript": "^5.8.2",
-    "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.2"
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0"
   },
   "peerDependencies": {
     "@rspress/core": "workspace:^2.0.0-alpha.7",
