--- a/packages/plugin-container-syntax/package.json
+++ b/packages/plugin-container-syntax/package.json
@@ -34,15 +34,15 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.2",
     "@rslib/core": "0.6.0",
-    "@types/mdast": "^3.0.15",
-    "mdast-util-mdx-expression": "^1.3.2",
-    "mdast-util-mdx-jsx": "^2.1.4",
-    "rehype-stringify": "^9.0.4",
-    "remark-directive": "^2.0.1",
-    "remark-mdx": "2.3.0",
-    "remark-parse": "^10.0.2",
-    "remark-rehype": "^10.1.0",
-    "unified": "^10.1.2"
+    "@types/mdast": "^4.0.4",
+    "mdast-util-mdx-expression": "^2.0.1",
+    "mdast-util-mdx-jsx": "^3.2.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-directive": "^4.0.0",
+    "remark-mdx": "^3.1.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
+    "unified": "^11.0.5"
   },
   "engines": {
     "node": ">=14.17.6"
