--- a/packages/plugin-playground/package.json
+++ b/packages/plugin-playground/package.json
@@ -34,11 +34,11 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
-    "@mdx-js/mdx": "2.3.0",
+    "@mdx-js/mdx": "^3.1.0",
     "@monaco-editor/react": "~4.7.0",
     "@oxidation-compiler/napi": "^0.2.0",
     "@rspress/shared": "workspace:*",
-    "remark-gfm": "3.0.1",
+    "remark-gfm": "^4.0.1",
     "rspack-plugin-virtual-module": "0.1.13"
   },
   "devDependencies": {
@@ -48,17 +48,17 @@
     "@types/babel__core": "^7.20.5",
     "@types/babel__standalone": "^7.1.9",
     "@types/babel__traverse": "^7.20.7",
-    "@types/mdast": "^3.0.15",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
-    "mdast-util-mdx-jsx": "^2.1.4",
+    "mdast-util-mdx-jsx": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.29.0",
     "typescript": "^5.8.2",
-    "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.2"
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0"
   },
   "peerDependencies": {
     "@rspress/core": "workspace:^2.0.0-alpha.7",
