--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -75,8 +75,8 @@
     "react-lazy-with-preload": "^2.2.1",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-external-links": "^3.0.0",
-    "remark": "^14.0.3",
-    "remark-gfm": "3.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
     "rspack-plugin-virtual-module": "0.1.13",
     "tinyglobby": "^0.2.12",
     "unified": "^11.0.5",
