refactor(virtual-module): i18n.json restart -> reload/hmr

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -104,6 +104,7 @@
     "remark-rehype": "^11.1.1",
     "remark-stringify": "^11.0.0",
     "rimraf": "^6.0.1",
+    "rsbuild-plugin-virtual-module": "0.1.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2",
     "vfile": "^5.3.7"
