--- a/packages/plugin-shiki/package.json
+++ b/packages/plugin-shiki/package.json
@@ -16,12 +16,20 @@
     "*.scss"
   ],
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./shiki.css": {
+      "default": "./dist/shiki.css"
+    }
+  },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist",
-    "shiki.css"
+    "dist"
   ],
   "scripts": {
     "build": "rslib build",
@@ -30,12 +38,14 @@
   },
   "dependencies": {
     "@rspress/shared": "workspace:*",
+    "@shikijs/rehype": "^3.2.1",
     "hast-util-from-html": "^2.0.3",
     "shiki": "^3.2.1",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.3",
+    "@rsbuild/plugin-sass": "~1.3.1",
     "@rslib/core": "0.6.1",
     "@rspress/config": "workspace:*",
     "@types/hast": "^3.0.4",
