--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -20,6 +20,7 @@
     "@rspress/plugin-algolia": "workspace:*",
     "@rspress/plugin-shiki": "workspace:*",
     "@rstack-dev/doc-ui": "1.7.3",
+    "@shikijs/transformers": "^3.1.0",
     "@types/react": "^18.3.20",
     "framer-motion": "12.0.6",
     "rsbuild-plugin-google-analytics": "^1.0.3",
