--- a/packages/plugin-rss/tsconfig.runtime.json
+++ b/packages/plugin-rss/tsconfig.runtime.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@modern-js/tsconfig/react",
+  "extends": "@rspress/config/tsconfig",
   "compilerOptions": {
     "composite": true,
     "declaration": true,
