chore(infra): fix the exclude filter does not work (#2078)

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -34,11 +34,11 @@ jobs:
       - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
         id: changes
         with:
+          predicate-quantifier: 'every'
           filters: |
             changed:
               - "packages/**"
               - "!packages/document/**"
-              - "pnpm-lock.yaml"
 
       - name: Setup Node.js
         if: steps.changes.outputs.changed == 'true'
