--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rspress",
-  "version": "2.0.0-alpha.12",
+  "version": "2.0.0-beta.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/web-infra-dev/rspress",
