--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -65,7 +65,6 @@
     "hast-util-from-html": "^2.0.3",
     "hast-util-heading-rank": "^3.0.0",
     "html-to-text": "^9.0.5",
-    "htmr": "^1.0.2",
     "lodash-es": "^4.17.21",
     "mdast-util-mdxjs-esm": "^2.0.1",
     "picocolors": "^1.1.1",
@@ -73,6 +72,7 @@
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-lazy-with-preload": "^2.2.1",
+    "react-router-dom": "^6.29.0",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-external-links": "^3.0.0",
     "remark": "^15.0.1",
