--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0-beta.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/web-infra-dev/rspress",
+    "url": "git+https://github.com/web-infra-dev/rspress.git",
     "directory": "packages/cli"
   },
   "license": "MIT",
@@ -55,6 +55,7 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.20",
     "rimraf": "^6.0.1",
+    "rsbuild-plugin-publint": "^0.3.0",
     "typescript": "^5.8.2"
   },
   "publishConfig": {
