--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0-beta.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/web-infra-dev/rspress",
+    "url": "git+https://github.com/web-infra-dev/rspress.git",
     "directory": "packages/document"
   },
   "license": "MIT",
