--- a/packages/plugin-shiki/package.json
+++ b/packages/plugin-shiki/package.json
@@ -5,7 +5,7 @@
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/web-infra-dev/rspress",
+    "url": "git+https://github.com/web-infra-dev/rspress.git",
     "directory": "packages/plugin-last-updated"
   },
   "license": "MIT",
@@ -53,6 +53,7 @@
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "react": "^19.1.0",
+    "rsbuild-plugin-publint": "^0.3.0",
     "typescript": "^5.8.2",
     "unified": "^11.0.5"
   },
