--- a/packages/plugin-typedoc/package.json
+++ b/packages/plugin-typedoc/package.json
@@ -5,7 +5,7 @@
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/web-infra-dev/rspress",
+    "url": "git+https://github.com/web-infra-dev/rspress.git",
     "directory": "packages/plugin-typedoc"
   },
   "license": "MIT",
@@ -15,7 +15,13 @@
     "*.sass",
     "*.scss"
   ],
-  "main": "./dist/lib/index.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/es/index.js"
+    }
+  },
   "module": "./dist/es/index.js",
   "types": "./dist/types/index.d.ts",
   "files": [
@@ -39,6 +45,7 @@
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "react": "^19.1.0",
+    "rsbuild-plugin-publint": "^0.3.0",
     "typescript": "^5.8.2"
   },
   "peerDependencies": {
