--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -5,7 +5,7 @@
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/web-infra-dev/rspress",
+    "url": "git+https://github.com/web-infra-dev/rspress.git",
     "directory": "packages/runtime"
   },
   "license": "MIT",
@@ -18,6 +18,7 @@
     "virtual-global-styles",
     "./src/theme-default/styles/index.ts"
   ],
+  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -28,7 +29,6 @@
       "default": "./server.js"
     }
   },
-  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
@@ -54,6 +54,7 @@
     "@types/jest": "~29.5.14",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
+    "rsbuild-plugin-publint": "^0.3.0",
     "typescript": "^5.8.2"
   },
   "engines": {
