--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,34 +3,30 @@
   "version": "2.0.0-beta.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/web-infra-dev/rspress",
+    "url": "git+https://github.com/web-infra-dev/rspress.git",
     "directory": "packages/shared"
   },
   "license": "MIT",
+  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "default": "./dist/index.js"
     },
     "./constants": {
       "types": "./dist/constants.d.ts",
-      "import": "./dist/constants.mjs",
-      "require": "./dist/constants.js"
+      "default": "./dist/constants.js"
     },
     "./logger": {
       "types": "./dist/logger.d.ts",
-      "import": "./dist/logger.mjs",
-      "require": "./dist/logger.js"
+      "default": "./dist/logger.js"
     },
     "./node-utils": {
       "types": "./dist/node-utils.d.ts",
-      "import": "./dist/node-utils.mjs",
-      "require": "./dist/node-utils.js"
+      "default": "./dist/node-utils.js"
     }
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
@@ -55,6 +51,7 @@
     "mdast-util-mdx-jsx": "^3.2.0",
     "medium-zoom": "1.1.0",
     "rimraf": "^6.0.1",
+    "rsbuild-plugin-publint": "^0.3.0",
     "typescript": "^5.8.2"
   },
   "publishConfig": {
