--- a/packages/plugin-shiki/package.json
+++ b/packages/plugin-shiki/package.json
@@ -40,8 +40,7 @@
     "@rspress/shared": "workspace:*",
     "@shikijs/rehype": "^3.2.2",
     "hast-util-from-html": "^2.0.3",
-    "shiki": "^3.2.2",
-    "unist-util-visit": "^5.0.0"
+    "shiki": "^3.2.2"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.4",
@@ -54,8 +53,7 @@
     "@types/react-dom": "^18.3.6",
     "react": "^19.1.0",
     "rsbuild-plugin-publint": "^0.3.0",
-    "typescript": "^5.8.2",
-    "unified": "^11.0.5"
+    "typescript": "^5.8.2"
   },
   "engines": {
     "node": ">=14.17.6"
