--- a/packages/plugin-api-docgen/package.json
+++ b/packages/plugin-api-docgen/package.json
@@ -33,7 +33,8 @@
     "documentation": "14.0.3",
     "react-docgen-typescript": "2.2.2",
     "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.4",
@@ -46,9 +47,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.29.0",
     "rsbuild-plugin-publint": "^0.3.0",
-    "typescript": "^5.8.2",
-    "unified": "^11.0.5",
-    "unist-util-visit": "^5.0.0"
+    "typescript": "^5.8.2"
   },
   "peerDependencies": {
     "@rspress/core": "workspace:^2.0.0-beta.0",
