--- a/packages/plugin-algolia/package.json
+++ b/packages/plugin-algolia/package.json
@@ -40,11 +40,7 @@
   },
   "dependencies": {
     "@docsearch/css": "^3.9.0",
-    "@docsearch/react": "^3.9.0",
-    "algoliasearch": "^5.23.4",
-    "instantsearch.css": "^8.5.1",
-    "instantsearch.js": "^4.78.1",
-    "react-instantsearch": "^7.15.5"
+    "@docsearch/react": "^3.9.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.4",
