--- a/packages/plugin-algolia/package.json
+++ b/packages/plugin-algolia/package.json
@@ -5,7 +5,7 @@
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/web-infra-dev/rspress",
+    "url": "git+https://github.com/web-infra-dev/rspress.git",
     "directory": "packages/plugin-algolia"
   },
   "license": "MIT",
@@ -40,11 +40,7 @@
   },
   "dependencies": {
     "@docsearch/css": "^3.9.0",
-    "@docsearch/react": "^3.9.0",
-    "algoliasearch": "^5.23.4",
-    "instantsearch.css": "^8.5.1",
-    "instantsearch.js": "^4.78.1",
-    "react-instantsearch": "^7.15.5"
+    "@docsearch/react": "^3.9.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.4",
@@ -56,6 +52,7 @@
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "react": "^19.1.0",
+    "rsbuild-plugin-publint": "^0.3.0",
     "typescript": "^5.8.2"
   },
   "peerDependencies": {
