--- a/packages/plugin-last-updated/package.json
+++ b/packages/plugin-last-updated/package.json
@@ -5,7 +5,7 @@
   "bugs": "https://github.com/web-infra-dev/rspress/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/web-infra-dev/rspress",
+    "url": "git+https://github.com/web-infra-dev/rspress.git",
     "directory": "packages/plugin-last-updated"
   },
   "license": "MIT",
@@ -16,7 +16,12 @@
     "*.scss"
   ],
   "type": "module",
-  "main": "./dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "module": "./dist/index.js",
   "types": "./index.d.ts",
   "files": [
@@ -40,6 +45,7 @@
     "@types/react-dom": "^18.3.6",
     "execa": "8.0.1",
     "react": "^19.1.0",
+    "rsbuild-plugin-publint": "^0.3.0",
     "typescript": "^5.8.2"
   },
   "engines": {
