--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@rsbuild/plugin-sass": "~1.3.1",
     "@rspress/plugin-algolia": "workspace:*",
+    "@rspress/plugin-llms": "workspace:*",
     "@rspress/plugin-shiki": "workspace:*",
     "@rstack-dev/doc-ui": "1.7.4",
     "@shikijs/transformers": "^3.2.2",
