--- a/packages/plugin-llms/package.json
+++ b/packages/plugin-llms/package.json
@@ -23,6 +23,10 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
+    "@rspress/shared": "workspace:*",
+    "remark-mdx": "^3.1.0",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "unist-util-visit-children": "^3.0.0"
@@ -32,18 +36,14 @@
     "@rsbuild/core": "1.3.13",
     "@rslib/core": "0.6.7",
     "@rspress/config": "workspace:*",
-    "@rspress/shared": "workspace:*",
+    "@rspress/runtime": "workspace:*",
     "@types/hast": "^3.0.4",
     "@types/node": "^18.11.17",
-    "remark-mdx": "^3.1.0",
-    "remark-parse": "^11.0.0",
-    "remark-stringify": "^11.0.0",
     "typescript": "^5.8.2",
     "vfile": "^6.0.3"
   },
   "peerDependencies": {
-    "@rspress/core": "workspace:^2.0.0-beta.2",
-    "@rspress/runtime": "workspace:^2.0.0-beta.2"
+    "@rspress/core": "workspace:^2.0.0-beta.2"
   },
   "engines": {
     "node": ">=18.0.0"
