--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,6 +47,7 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
+    "@dr.pogodin/react-helmet": "2.0.4",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
@@ -70,7 +71,6 @@
     "picocolors": "^1.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-helmet-async": "^2.0.5",
     "react-lazy-with-preload": "^2.2.1",
     "react-router-dom": "^6.29.0",
     "react-syntax-highlighter": "^15.6.1",
