--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -44,6 +44,7 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
+    "@dr.pogodin/react-helmet": "2.0.4",
     "@mdx-js/react": "2.3.0",
     "@rspress/runtime": "workspace:*",
     "@rspress/shared": "workspace:*",
@@ -56,7 +57,6 @@
     "nprogress": "^0.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-helmet-async": "^2.0.5",
     "react-syntax-highlighter": "^15.6.1"
   },
   "devDependencies": {
