--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,7 +47,6 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
-    "@dr.pogodin/react-helmet": "2.0.4",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
@@ -61,6 +60,7 @@
     "@rspress/runtime": "workspace:*",
     "@rspress/shared": "workspace:*",
     "@rspress/theme-default": "workspace:*",
+    "@unhead/react": "^2.0.0",
     "enhanced-resolve": "5.18.1",
     "github-slugger": "^2.0.0",
     "hast-util-from-html": "^2.0.3",
