--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@rsbuild/core": "1.3.16",
+    "@shikijs/rehype": "^3.2.2",
     "gray-matter": "4.0.3",
     "lodash-es": "^4.17.21",
     "unified": "^11.0.5"
