--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,12 @@
   "files.exclude": {
     "**/.DS_Store": true
   },
+  "json.schemas": [
+    {
+      "fileMatch": ["**/_meta.json"],
+      "url": "./packages/cli/meta-json-schema.json"
+    }
+  ],
   "mdx.validate.validateFileLinks": "ignore",
   "editor.codeActionsOnSave": {
     "source.organizeImports.biome": "explicit"
