--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,11 +33,13 @@
     "dist",
     "runtime.ts",
     "theme.ts",
-    "config.ts"
+    "config.ts",
+    "meta-json-schema.json"
   ],
   "scripts": {
     "build": "rslib build",
     "dev": "rslib build -w",
+    "prepare": "node ./scripts/generateJsonSchema.mjs",
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
@@ -56,6 +58,7 @@
     "@types/react": "^18.3.21",
     "rimraf": "^6.0.1",
     "rsbuild-plugin-publint": "^0.3.1",
+    "ts-json-schema-generator": "^2.4.0",
     "typescript": "^5.8.2"
   },
   "publishConfig": {
