--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -56,8 +56,7 @@
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.7",
@@ -74,7 +73,6 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.3.7",
-    "@types/react-syntax-highlighter": "^15.5.13",
     "gray-matter": "4.0.3",
     "rsbuild-plugin-publint": "^0.3.1",
     "tailwindcss": "^3.4.17",
