--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,7 +50,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@rsbuild/core": "1.3.18",
+    "@rsbuild/core": "~1.3.18",
     "@rsbuild/plugin-react": "~1.3.1",
     "@rspress/mdx-rs": "0.6.6",
     "@rspress/plugin-auto-nav-sidebar": "workspace:*",
