--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,8 +50,8 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@rsbuild/core": "1.3.17",
-    "@rsbuild/plugin-react": "~1.3.0",
+    "@rsbuild/core": "~1.3.18",
+    "@rsbuild/plugin-react": "~1.3.1",
     "@rspress/mdx-rs": "0.6.6",
     "@rspress/plugin-auto-nav-sidebar": "workspace:*",
     "@rspress/plugin-container-syntax": "workspace:*",
@@ -78,7 +78,7 @@
     "rehype-external-links": "^3.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
-    "rspack-plugin-virtual-module": "0.1.13",
+    "rspack-plugin-virtual-module": "1.0.0",
     "tinyglobby": "^0.2.13",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
