--- a/packages/plugin-api-docgen/package.json
+++ b/packages/plugin-api-docgen/package.json
@@ -29,7 +29,8 @@
     "github-slugger": "^2.0.0",
     "react-docgen-typescript": "2.2.2",
     "react-markdown": "8.0.7",
-    "remark-gfm": "3.0.1"
+    "remark-gfm": "3.0.1",
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
@@ -43,8 +44,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.29.0",
     "typescript": "^5.5.3",
-    "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.2"
+    "unified": "^10.1.2"
   },
   "peerDependencies": {
     "@rspress/core": "workspace:^1.43.13",
