--- a/packages/plugin-api-docgen/package.json
+++ b/packages/plugin-api-docgen/package.json
@@ -26,13 +26,16 @@
     "@rspress/shared": "workspace:*",
     "chokidar": "^3.6.0",
     "documentation": "14.0.3",
+    "github-slugger": "^2.0.0",
     "react-docgen-typescript": "2.2.2",
     "react-markdown": "8.0.7",
-    "remark-gfm": "3.0.1"
+    "remark-gfm": "3.0.1",
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
     "@rslib/core": "0.5.2",
+    "@types/hast": "^2.3.10",
     "@types/mdast": "^3.0.15",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
@@ -41,8 +44,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.29.0",
     "typescript": "^5.5.3",
-    "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.2"
+    "unified": "^10.1.2"
   },
   "peerDependencies": {
     "@rspress/core": "workspace:^1.43.13",
