--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -41,7 +41,7 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
-    "@rsbuild/core": "1.3.17",
+    "@rsbuild/core": "~1.3.18",
     "@rspress/core": "workspace:*",
     "@rspress/shared": "workspace:*",
     "cac": "^6.7.14",
@@ -50,7 +50,7 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
-    "@rslib/core": "0.5.2",
+    "@rslib/core": "~0.6.9",
     "@types/jest": "~29.5.14",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
