--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,12 +47,12 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
-    "@mdx-js/loader": "2.3.0",
-    "@mdx-js/mdx": "2.3.0",
-    "@mdx-js/react": "2.3.0",
-    "@rsbuild/core": "1.3.17",
-    "@rsbuild/plugin-less": "~1.2.0",
-    "@rsbuild/plugin-react": "~1.3.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@rsbuild/core": "~1.3.18",
+    "@rsbuild/plugin-less": "~1.2.4",
+    "@rsbuild/plugin-react": "~1.3.1",
     "@rsbuild/plugin-sass": "~1.3.0",
     "@rspress/mdx-rs": "0.6.6",
     "@rspress/plugin-auto-nav-sidebar": "workspace:*",
@@ -88,7 +88,7 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
-    "@rslib/core": "0.5.2",
+    "@rslib/core": "~0.6.9",
     "@rspress-dev/plugin-preview": "link:../plugin-preview",
     "@rspress/config": "workspace:*",
     "@types/hast": "^2.3.10",
