--- a/packages/create-rspress/package.json
+++ b/packages/create-rspress/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
-    "@rslib/core": "0.5.2",
+    "@rslib/core": "~0.6.9",
     "@types/node": "^18.11.17",
     "typescript": "^5.5.3"
   },
