--- a/packages/modern-plugin-rspress/package.json
+++ b/packages/modern-plugin-rspress/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
     "@modern-js/module-tools": "2.64.0",
-    "@rslib/core": "0.5.2",
+    "@rslib/core": "~0.6.9",
     "@types/lodash": "^4.17.15",
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
