--- a/packages/plugin-api-docgen/package.json
+++ b/packages/plugin-api-docgen/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
-    "@rslib/core": "0.5.2",
+    "@rslib/core": "~0.6.9",
     "@types/hast": "^2.3.10",
     "@types/mdast": "^3.0.15",
     "@types/node": "^18.11.17",
