--- a/packages/plugin-container-syntax/package.json
+++ b/packages/plugin-container-syntax/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
-    "@rslib/core": "0.5.2",
+    "@rslib/core": "~0.6.9",
     "@types/mdast": "^3.0.15",
     "mdast-util-mdx-expression": "^1.3.2",
     "mdast-util-mdx-jsx": "^2.1.4",
