--- a/packages/plugin-playground/package.json
+++ b/packages/plugin-playground/package.json
@@ -42,9 +42,10 @@
     "rspack-plugin-virtual-module": "0.1.13"
   },
   "devDependencies": {
-    "@babel/types": "^7.26.7",
-    "@rsbuild/plugin-react": "~1.1.0",
-    "@rslib/core": "0.5.2",
+    "@babel/types": "^7.27.1",
+    "@rsbuild/plugin-react": "~1.3.1",
+    "@rslib/core": "~0.6.9",
+    "@rspress/plugin-playground": "workspace:*",
     "@types/babel__core": "^7.20.5",
     "@types/babel__standalone": "^7.1.9",
     "@types/babel__traverse": "^7.20.6",
