--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -22,7 +22,7 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
-    "@rsbuild/core": "1.3.17",
+    "@rsbuild/core": "~1.3.18",
     "@rsbuild/plugin-babel": "~1.0.5",
     "@rsbuild/plugin-less": "~1.2.4",
     "@rsbuild/plugin-react": "~1.3.1",
@@ -34,7 +34,7 @@
     "qrcode.react": "^3.2.0"
   },
   "devDependencies": {
-    "@rslib/core": "0.5.2",
+    "@rslib/core": "~0.6.9",
     "@types/lodash": "^4.17.15",
     "@types/mdast": "^3.0.15",
     "@types/node": "^18.11.17",
