--- a/packages/plugin-shiki/package.json
+++ b/packages/plugin-shiki/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
-    "@rslib/core": "0.5.2",
+    "@rslib/core": "~0.6.9",
     "@rspress/config": "workspace:*",
     "@types/hast": "^2.3.10",
     "@types/node": "^18.11.17",
