--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -48,8 +48,8 @@
     "react-router-dom": "^6.29.0"
   },
   "devDependencies": {
-    "@rsbuild/plugin-react": "~1.1.0",
-    "@rslib/core": "0.5.2",
+    "@rsbuild/plugin-react": "~1.3.1",
+    "@rslib/core": "~0.6.9",
     "@rspress/config": "workspace:*",
     "@types/jest": "~29.5.14",
     "@types/react": "^18.3.18",
