--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -41,13 +41,13 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
-    "@rsbuild/core": "1.3.17",
+    "@rsbuild/core": "~1.3.18",
     "gray-matter": "4.0.3",
     "lodash-es": "^4.17.21",
     "unified": "^10.1.2"
   },
   "devDependencies": {
-    "@rslib/core": "0.5.2",
+    "@rslib/core": "~0.6.9",
     "@types/fs-extra": "11.0.4",
     "@types/jest": "~29.5.14",
     "@types/lodash-es": "^4.17.12",
