--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -61,10 +61,10 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.49.2",
     "@modern-js/tsconfig": "2.64.0",
-    "@rsbuild/plugin-react": "~1.1.0",
-    "@rsbuild/plugin-sass": "~1.2.0",
-    "@rsbuild/plugin-svgr": "^1.0.6",
-    "@rslib/core": "0.5.2",
+    "@rsbuild/plugin-react": "~1.3.1",
+    "@rsbuild/plugin-sass": "~1.3.1",
+    "@rsbuild/plugin-svgr": "^1.2.0",
+    "@rslib/core": "~0.6.9",
     "@types/body-scroll-lock": "^3.1.2",
     "@types/hast": "^2.3.10",
     "@types/jest": "~29.5.14",
