--- a/packages/plugin-image/package.json
+++ b/packages/plugin-image/package.json
@@ -9,7 +9,6 @@
     "directory": "packages/plugin-image"
   },
   "license": "MIT",
-  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -28,14 +27,22 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
+    "@img/sharp-wasm32": "0.34.1",
     "@mdx-js/mdx": "^3.1.0",
+    "@rsbuild-image/core": "^0.0.1-next.31",
     "@rspress/shared": "workspace:*",
+    "estree-walker": "^3.0.3",
+    "ipx": "^3.0.3",
+    "mdast-util-mdx-jsx": "^3.2.0",
+    "mdast-util-mdxjs-esm": "^2.0.1",
     "remark-gfm": "^4.0.1",
     "rspack-plugin-virtual-module": "1.0.0",
+    "sharp": "0.34.1",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@babel/types": "^7.27.1",
+    "@rsbuild-image/react": "^0.0.1-next.31",
     "@rsbuild/plugin-react": "~1.3.1",
     "@rslib/core": "0.6.9",
     "@rspress/plugin-image": "workspace:*",
@@ -55,6 +62,7 @@
     "unified": "^11.0.5"
   },
   "peerDependencies": {
+    "@rsbuild-image/react": "^0.0.1-next.31",
     "@rspress/core": "workspace:^2.0.0-beta.5",
     "react": ">=18.0.0",
     "react-router-dom": "^6.8.1"
