--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
       "core-js",
       "esbuild",
       "nx"
-    ]
+    ],
+    "patchedDependencies": {
+      "htmr": "patches/htmr.patch"
+    }
   }
 }
