feat: add new `CodeBlockRuntime` component (#2190)

--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -56,7 +56,8 @@
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "shiki": "^3.4.2"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.7",
