--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -15,8 +15,7 @@
     "*.sass",
     "*.scss",
     "**/virtual-global-styles.js",
-    "virtual-global-styles",
-    "./src/theme-default/styles/index.ts"
+    "virtual-global-styles"
   ],
   "type": "module",
   "exports": {
