--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -16,8 +16,7 @@
     "*.scss",
     "**/virtual-global-styles.js",
     "virtual-global-styles",
-    "./src/styles/index.ts",
-    "./dist/index.js"
+    "./dist/styles/index.js"
   ],
   "type": "module",
   "imports": {
@@ -25,15 +24,13 @@
   },
   "exports": {
     ".": {
-      "types": "./dist/bundle.d.ts",
+      "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     },
-    "./node/*": "./dist/node/*",
-    "./package.json": "./package.json",
-    "./bundle.css": "./dist/bundle.css"
+    "./package.json": "./package.json"
   },
   "main": "./dist/index.js",
-  "types": "./dist/bundle.d.ts",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -75,7 +72,6 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.22",
     "@types/react-dom": "^18.3.7",
-    "gray-matter": "4.0.3",
     "rsbuild-plugin-publint": "^0.3.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2"
