fix(theme/style): add preEntry to ensure css order (#2248)

--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -25,6 +25,7 @@
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     },
+    "./styles": "./dist/styles/index.js",
     "./package.json": "./package.json"
   },
   "main": "./dist/index.js",
