chore(deps): bump to Rslib and remove #themes imports

--- a/packages/theme-default/tsconfig.json
+++ b/packages/theme-default/tsconfig.json
@@ -7,7 +7,7 @@
     "rootDir": "src",
     "baseUrl": ".",
     "paths": {
-      "#theme/*": ["./src/*"]
+      "@theme": ["./src/index.ts"]
     }
   },
   "include": ["src"],
