refactor: remove @rspress/plugin-shiki, create "@rspress/core/shiki-transformers"

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,6 +20,9 @@
     },
     "./config": {
       "default": "./config.ts"
+    },
+    "./shiki-transformers": {
+      "default": "./shiki-transformers.ts"
     }
   },
   "main": "./dist/index.js",
