chore: adopt the breaking change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,10 @@
     {
       "fileMatch": ["**/_meta.json"],
       "url": "./packages/cli/meta-json-schema.json"
+    },
+    {
+      "fileMatch": ["**/_nav.json"],
+      "url": "./packages/cli/nav-json-schema.json"
     }
   ],
   "mdx.validate.validateFileLinks": "ignore",
