fix: should add nav-json-schema.json and expose `rspress/shiki-transformers` (#2327)

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -23,7 +23,8 @@
     },
     "./shiki-transformers": {
       "default": "./shiki-transformers.ts"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -38,7 +39,8 @@
     "theme.ts",
     "config.ts",
     "shiki-transformers.ts",
-    "meta-json-schema.json"
+    "meta-json-schema.json",
+    "nav-json-schema.json"
   ],
   "scripts": {
     "build": "rslib build",
