refactor: no depend on @rspress/shared anymore

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -7,8 +7,7 @@
     "baseUrl": "src",
     "rootDir": "."
   },
-  "include": ["src", "rslib.config.ts", "runtime.ts", "theme.ts"],
-  "exclude": ["**/node_modules"],
+  "include": ["src"],
   "references": [
     {
       "path": "../core"
