--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,14 +24,20 @@
     "./dist/*": "./dist/*",
     "./package.json": "./package.json",
     "./theme": {
-      "default": "./theme.ts"
+      "types": "./dist/theme.d.ts",
+      "default": "./dist/theme.js"
+    },
+    "./runtime": {
+      "types": "./dist/runtime.d.ts",
+      "default": "./dist/runtime.js"
+    },
+    "./runtime/server": {
+      "types": "./dist/runtime-server.d.ts",
+      "default": "./dist/runtime-server.js"
     },
     "./shiki-transformers": {
       "types": "./dist/shiki-transformers.d.ts",
       "default": "./dist/shiki-transformers.js"
-    },
-    "./runtime": {
-      "default": "./runtime.ts"
     }
   },
   "main": "./dist/index.js",
