--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,19 +10,28 @@
   "type": "module",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     },
+    "./core": {
+      "types": "./dist/core.d.ts",
+      "default": "./dist/core.js"
+    },
     "./runtime": {
-      "default": "./runtime.ts"
+      "types": "./dist/runtime.d.ts",
+      "default": "./dist/runtime.js"
     },
     "./theme": {
-      "default": "./theme.ts"
+      "types": "./dist/theme.d.ts",
+      "default": "./dist/theme.js"
     },
     "./config": {
-      "default": "./config.ts"
+      "types": "./dist/config.d.ts",
+      "default": "./dist/config.js"
     },
     "./shiki-transformers": {
-      "default": "./shiki-transformers.ts"
+      "types": "./dist/shiki-transformers.d.ts",
+      "default": "./dist/shiki-transformers.js"
     },
     "./package.json": "./package.json"
   },
@@ -35,10 +44,6 @@
   "files": [
     "bin",
     "dist",
-    "runtime.ts",
-    "theme.ts",
-    "config.ts",
-    "shiki-transformers.ts",
     "meta-json-schema.json",
     "nav-json-schema.json"
   ],
