--- a/packages/plugin-algolia/package.json
+++ b/packages/plugin-algolia/package.json
@@ -47,7 +47,6 @@
     "@rsbuild/plugin-react": "~1.3.3",
     "@rslib/core": "0.10.4",
     "@rspress/config": "workspace:*",
-    "@rspress/shared": "workspace:*",
     "@types/node": "^22.8.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -56,7 +55,7 @@
     "typescript": "^5.8.2"
   },
   "peerDependencies": {
-    "@rspress/runtime": "workspace:^2.0.0-beta.20"
+    "rspress": "workspace:^2.0.0-beta.20"
   },
   "engines": {
     "node": ">=18.0.0"
