--- a/packages/plugin-llms/package.json
+++ b/packages/plugin-llms/package.json
@@ -23,7 +23,6 @@
     "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
-    "@rspress/shared": "workspace:*",
     "remark-mdx": "^3.1.0",
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
@@ -43,7 +42,7 @@
     "vfile": "^6.0.3"
   },
   "peerDependencies": {
-    "@rspress/core": "workspace:^2.0.0-beta.20"
+    "rspress": "workspace:^2.0.0-beta.20"
   },
   "engines": {
     "node": ">=18.0.0"
