--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -34,7 +34,6 @@
     "@rsbuild/plugin-react": "~1.3.3",
     "@rsbuild/plugin-sass": "~1.3.2",
     "@rsbuild/plugin-solid": "~1.0.5",
-    "@rspress/shared": "workspace:*",
     "@rspress/theme-default": "workspace:*",
     "lodash": "4.17.21",
     "qrcode.react": "^4.2.0"
@@ -57,9 +56,9 @@
     "unist-util-visit": "^5.0.0"
   },
   "peerDependencies": {
-    "@rspress/core": "workspace:^2.0.0-beta.20",
     "react": ">=18.0.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "rspress": "workspace:^2.0.0-beta.20"
   },
   "engines": {
     "node": ">=18.0.0"
