--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -9,7 +9,7 @@
     "version": false,
     "tag": false
   },
-  "fixed": [["@rspress/*", "rspress", "create-rspress"]],
+  "fixed": [["@rspress/*", "create-rspress"]],
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
     "onlyUpdatePeerDependentsWhenOutOfRange": true,
     "updateInternalDependents": "always"
