--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     ]
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "^2.1.2",
     "@changesets/cli": "^2.29.5",
     "@playwright/test": "1.54.1",
     "@rspress/config": "workspace:*",
