--- a/.github/workflows/test-macOS.yml
+++ b/.github/workflows/test-macOS.yml
@@ -1,4 +1,4 @@
-name: Test (vitest & playwright - macOS)
+name: Test (rstest & playwright - macOS)
 
 concurrency:
   group: macos-test-${{ github.head_ref }}
