--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "preview:website": "cd packages/document && npm run preview",
     "test": "pnpm test:unit && pnpm test:e2e",
     "test:e2e": "playwright test",
-    "test:unit": "vitest run",
+    "test:unit": "rstest run",
     "update:rsbuild": "npx taze minor --include /rsbuild/ -w -r -l"
   },
   "lint-staged": {
@@ -35,6 +35,7 @@
     "@changesets/cli": "^2.29.5",
     "@playwright/test": "1.53.2",
     "@rspress/config": "workspace:*",
+    "@rstest/core": "0.0.9",
     "@types/cross-spawn": "^6.0.6",
     "@types/node": "^22.8.1",
     "check-dependency-version-consistency": "^5.0.1",
@@ -52,7 +53,6 @@
     "prettier": "3.6.2",
     "prettier-plugin-packagejson": "^2.5.18",
     "tree-kill": "^1.2.2",
-    "vitest": "2.1.9",
     "zx": "^8.6.1"
   },
   "packageManager": "pnpm@10.2.0",
