feat(plugin-sitemap): init @rspress/plugin-sitemap

--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -20,6 +20,7 @@
     "@rspress/core": "workspace:*",
     "@rspress/plugin-algolia": "workspace:*",
     "@rspress/plugin-llms": "workspace:*",
+    "@rspress/plugin-sitemap": "workspace:*",
     "@rstack-dev/doc-ui": "1.10.7",
     "@shikijs/transformers": "^3.8.1",
     "@types/react": "^19.1.8",
